--- a/nginx.conf
+++ b/nginx.conf
@@ -7,11 +7,7 @@ http {
     default_type  application/octet-stream;
     
     # Logging
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-                    '$status $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" "$http_x_forwarded_for"';
-    
-    access_log /var/log/nginx/access.log main;
+    access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
     
     # Gzip
@@ -20,11 +16,8 @@ http {
     gzip_min_length 1024;
     gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
     
-    # Rate limiting
-    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
-    
     server {
-        listen 3000;
+        listen 8080;
         server_name localhost;
         
         # Root directory
@@ -34,38 +27,23 @@ http {
         # Health check endpoints
         location /health {
             add_header Content-Type application/json;
-            return 200 '{"status":"healthy","service":"frontend-3d-visualizer","timestamp":"$time_iso8601"}';
+            return 200 '{"status":"healthy","service":"virida-infrastructure","timestamp":"$time_iso8601"}';
         }
         
         location /ready {
             add_header Content-Type application/json;
-            return 200 '{"status":"ready","service":"frontend-3d-visualizer","timestamp":"$time_iso8601"}';
+            return 200 '{"status":"ready","service":"virida-infrastructure","timestamp":"$time_iso8601"}';
         }
         
         location /metrics {
             add_header Content-Type application/json;
-            return 200 '{"status":"ok","service":"frontend-3d-visualizer","version":"1.0.0","timestamp":"$time_iso8601"}';
+            return 200 '{"status":"ok","service":"virida-infrastructure","version":"1.0.0","timestamp":"$time_iso8601"}';
         }
         
-        # Main application
+        # Main application - Page d'accueil VIRIDA
         location / {
             try_files $uri $uri/ /index.html;
             add_header Cache-Control "no-cache, no-store, must-revalidate";
-        }
-        
-        # Static assets
-        location /static/ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-        }
-        
-        # API proxy (pour le développement)
-        location /api/ {
-            proxy_pass http://backend-api-gateway:8080/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
         }
         
         # Security headers
@@ -75,4 +53,3 @@ http {
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
     }
 }
-
