--- a/frontend/dashboard/nginx.conf
+++ b/frontend/dashboard/nginx.conf
@@ -17,7 +17,7 @@ http {
     gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
     
     server {
-        listen 8080;
+        listen 3000;
         server_name localhost;
         
         # Root directory
@@ -27,7 +27,7 @@ http {
         # Health check endpoint
         location /health {
             add_header Content-Type application/json;
-            return 200 '{"status":"healthy","service":"virida","timestamp":"$time_iso8601"}';
+            return 200 '{"status":"healthy","service":"dashboard","timestamp":"$time_iso8601"}';
         }
         
         # API proxy
