--- a/nginx-standalone.conf
+++ b/nginx-standalone.conf
@@ -27,16 +27,13 @@ http {
         # Health check endpoint
         location /health {
             add_header Content-Type application/json;
-            return 200 '{"status":"healthy","service":"virida","timestamp":"$time_iso8601"}';
+            return 200 '{"status":"healthy","service":"virida-infrastructure","timestamp":"$time_iso8601"}';
         }
         
-        # API proxy
+        # API endpoint (placeholder)
         location /api/ {
-            proxy_pass http://backend-api-gateway:8080/api/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            add_header Content-Type application/json;
+            return 200 '{"message":"VIRIDA API - Service en cours de déploiement","status":"deploying","timestamp":"$time_iso8601"}';
         }
         
         # Static files
