🔧 Update root package.json for frontend 3D
- Points to apps/frontend-3d/server.js
- Allows frontend 3D to use its own code
- Each app now has its own specific package.json

--- a/package.json
+++ b/package.json
@@ -1,1 +1,1 @@
-{"name": "virida-backend-api", "version": "1.0.0", "main": "apps/backend-api/server.js", "scripts": {"start": "cd apps/backend-api && node server.js"}}
+{"name": "virida-frontend-3d", "version": "1.0.0", "main": "apps/frontend-3d/server.js", "scripts": {"start": "cd apps/frontend-3d && node server.js"}}
