--- a/apps/backend-api/package.json
+++ b/apps/backend-api/package.json
@@ -4,7 +4,7 @@
   "description": "VIRIDA Backend API Gateway - Application native Clever Cloud",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node start.js",
     "dev": "nodemon server.js",
     "test": "jest"
   },
