Fix Grafana deployment for Clever Cloud

--- a/apps/grafana/grafana.conf
+++ b/apps/grafana/grafana.conf
@@ -1,13 +1,14 @@
 [server]
 http_port = 3000
 root_url = %(protocol)s://%(domain)s:%(http_port)s/
+http_addr = 0.0.0.0
 
 [security]
 admin_password = admin
 
 [database]
 type = sqlite3
-path = grafana.db
+path = data/grafana.db
 
 [users]
 allow_sign_up = true
@@ -19,7 +20,7 @@ mode = console
 level = info
 
 [paths]
-data = /var/lib/grafana
-logs = /var/log/grafana
-plugins = /var/lib/grafana/plugins
-provisioning = /etc/grafana/provisioning
+data = data
+logs = logs
+plugins = plugins
+provisioning = provisioning
