--- a/apps/ai-ml/requirements.txt
+++ b/apps/ai-ml/requirements.txt
@@ -4,15 +4,10 @@ Flask==2.3.3
 Flask-CORS==4.0.0
 gunicorn==21.2.0
 
-# Data processing
+# Data processing (lighter versions)
 numpy==1.24.3
 pandas==2.0.3
 scikit-learn==1.3.0
-
-# Machine Learning
-tensorflow==2.13.0
-torch==2.0.1
-transformers==4.33.2
 
 # API and utilities
 requests==2.31.0
@@ -25,3 +20,7 @@ SQLAlchemy==2.0.19
 
 # Monitoring
 prometheus-client==0.17.1
+
+# Note: tensorflow, torch, transformers removed to prevent build timeouts
+# These can be added later if needed for specific ML features
+
